# DLC-colors

./: .gitignore  10_5000_dn0p12.tif  DLC-colors  Makefile  Makefile.am  Makefile.am~  Makefile.in  README  arc_d1200_dn0p12.tif  bar_d1200_dn0p12.tif  bar_d1200_dn0p12.tiff  config.h  config.status  configure  configure.ac  configure.ac~  filterplusd  notes  plot.R  test.txt  xm.txt  ym.txt  zm.txt
include/: DLC-colors.h~  DLC_colors.h  DLC_colors.h~  DLC_plot.h
src/: DLC-colors.cc~  DLC_colors.cc  DLC_plot.cc  main.cc  main.cc~
src/.deps/: DLC-colors.Po  main.Po
